--- a/webApp/public/index.html
+++ b/webApp/public/index.html
@@ -22,6 +22,8 @@
   <script src="/app/monitor/monitor.controller.js"></script>
   <script src="/app/monitor/monitor.service.js"></script>
 
+  <script src="/app/common/httpService.js"></script>
+
 </body>
 
 
